Version 1.1.0
------------------------------------------------------------------------
24 April 2008
+ Finished multiple approve/remove

23 April 2008
+ Comments now allows comment approval. (multiple approval not
  finished)
+ Updated: img/cancel.png, img/noentry.png, img/ok.png
  templates/approval.tpl, templates/settings_form.tpl
  javascript/quick_view/head.js

Version 1.0.1
------------------------------------------------------------------------
1 April 2008
+ Fixed broken report panel.

Version 1.0.0
------------------------------------------------------------------------
26 March 2008
+ added permission update to comments
+ Added error message for wrong admin call

7 March 2008
+ Permission check added to popup.
+ Removed unneeded ajax call
+ jquery called in default to prevent repeat
+ Updated: javascript/report/default.php

26 February 2008
+ Added clearing option to the reported form. It removes all
  complaints.
+ Added mouseover to comment entries to read full text from the report
  page.
+ Updated: ditto 22 Feb

22 February 2008
+ Reported interface written.
+ Punish system implemented
  o Users can be locked out of posting.
  o Users can be deactivated.
  o IP address of author can be denied.
+ Moved comment forms into its own class
+ New rules added to canComment function.
+ Locked users have their avatar turned into lock icon.
+ Italian translations added.
+ user_action and admin_action shrunk to uop and aop

+ Note: Access update required
+ Updated: img/lock.png, javascript/admin/head.js,
  templates/alt_view.tpl, templates/alt_view_one.tpl,
  templates/punish_pop.tpl, templates/reported.tpl,
  templates/style.css, templates/view.tpl, templates/view_one.tpl
  


19 February 2008
+ Added report function to flag comments. No interface written to view
  them yet.
+ Reduced default avatar size (update not required)

+ Updated: javascript/report/head.js (new directory)
+ templates/alt_view.tpl, templates/alt_view_one.tpl,