@@ -1,3 +1,7 @@
+26 May 2008
++ Added checkboxes to report form for multiple selection.
++ updated: javascript/admin/head.js, templates/reported.tpl
+
 Version 1.1.0
 ------------------------------------------------------------------------
 24 April 2008
